--- a/org/agenda.org
+++ b/org/agenda.org
@@ -106,6 +106,8 @@ participation.
 
 - [ ] Quiz 1: course infrastructure
 - [ ] About: home assignments
+- [ ] Group exercise: embedding probability
+- [ ] Running R in an Emacs Org-mode file
 - [ ] Lectures: Describing raw data
 - [ ] Practice: Getting started with R
 
@@ -123,11 +125,13 @@ especially as nobody has the slightest notion what it means."
   1. What historical time period are we talking about?
   2. Do you know anyone from that time and what they said, wrote or did?
   3. What were the world-views of people in antiquity?
+  4. What were their views towards statistics and probability?
 
 - *Group 2: Middle ages / Medieval man*
   1. What historical time period are we talking about?
   2. Do you know anyone from that time and what they said, wrote or did?
   3. What were the world-views of people in the middle ages?
+  4. What were their views towards statistics and probability?
 
 - *Group 3: Modern world / Mass man*
   1. What historical time period are we talking about?
