--- a/org/2_orientation.org
+++ b/org/2_orientation.org
@@ -128,7 +128,7 @@ convent, Le Celle, where St Francis of Assisi lived in a tiny cell.
 [[../img/2_medieval.jpg]]
 #+begin_notes
 1. From the end of the Roman Empire (ca. 400 AD) to the 15th century
-2. Benedict of Nursia, Charlemagne, St Stephen, Thomas Aquinas, Gengis
+2. Benedict of Nursia, Charlemagne, St Stephan, Thomas Aquinas, Gengis
    Khan, Jean d'Arc, Dante, Leonardo da Vinci, Michelangelo.
 3. Impatience with all limitations through Christian Faith; Germanic
    drive for transcendence; Truth through meditation
