--- a/org/agenda.org
+++ b/org/agenda.org
@@ -104,13 +104,15 @@ participation.
 
 * Week 2: getting started
 
-- [ ] Quiz 1: course infrastructure
+- [X] Quiz 1: course infrastructure
 - [ ] About: home assignments
 - [ ] Getting started with projects
 - [ ] Group work: Data Science At The End Of Modern Time
+- [ ] Lecture: Data Science At The End Of Modern Time
 - [ ] Running R in an Emacs Org-mode file
 - [ ] Lectures: Describing raw data
 - [ ] Practice: Getting started with R
+- [ ] Home assignment: summary statistics
 
 * Home assignments - how they work
 #+attr_html: :width 400px
@@ -129,11 +131,12 @@ participation.
 - You'll have to do the project in a team - 2 to 3 people
 
 - We can only accommodate at most 8 projects (last week of term)
+
 - Put your team/ideas into this table ([[https://lyon.instructure.com/courses/655/pages/enter-your-project-ideas-and-team-here][Canvas]]) by Thursday
 
-- [ ] *Who has not yet found a team?*
+- [X] *Who has not yet found a team?*
 
-- [ ] *Who has a team but no idea what to do?*
+- [X] *Who has a team but no idea what to do?*
 
 - Reminder: plenty of project opportunities ([[https://github.com/birkenkrahe/dsmath/blob/main/org/1_overview.org#many-project-opportunities][overview]] / GitHub [[https://github.com/birkenkrahe/dsmath/issues][issues]])
 
@@ -163,4 +166,14 @@ participation.
 especially as nobody has the slightest notion what it means."
 —Bertrand Russell, 1929 Lecture (cited in Bell 1945, 587)
 #+end_quote
+
+
+* 1st sprint review - Wed 1-Sep
+
+- [[https://lyon.instructure.com/courses/655/assignments/2277][Canvas assignment with submission]]
+
+- Complete [[https://lyon.instructure.com/courses/655/pages/enter-your-project-ideas-and-team-here][projects overview table]] in Canvas *today*!
+
+- If you are in > 1 course, you can use the same project idea!
+
 
