--- a/org/1_overview_practice.org
+++ b/org/1_overview_practice.org
@@ -1,6 +1,6 @@
 #+TITLE: Practice: Course Infrastructure
 #+AUTHOR: Marcus Birkenkrahe [pledged]
-#+SUBTITLE: Data visualization (DSC 302) Fall 2022
+#+SUBTITLE: Applied math for data science (DSC 482/MTH 445) Fall 2022
 #+OPTIONS: toc:nil num:nil ^:nil
 #+startup: overview hideblocks indent inlineimages
 * README
