--- a/org/3_raw_data.org
+++ b/org/3_raw_data.org
@@ -94,7 +94,16 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
       person = c("Peter", "Lois", "Meg", "Chris", "Stewie"),
       age = c(42, 40, 17, 14, 1),
       sex = factor(c("M", "F", "F", "M", "M")))
+    mydata
   #+end_src
+
+  #+RESULTS: mydata
+  :   person age sex
+  : 1  Peter  42   M
+  : 2   Lois  40   F
+  : 3    Meg  17   F
+  : 4  Chris  14   M
+  : 5 Stewie   1   M
 
 - R variables: character vector, numbers, factor with levels
 
@@ -104,6 +113,12 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
     str(mydata)
   #+end_src
 
+  #+RESULTS: str
+  : 'data.frame':       5 obs. of  3 variables:
+  :  $ person: chr  "Peter" "Lois" "Meg" "Chris" ...
+  :  $ age   : num  42 40 17 14 1
+  :  $ sex   : Factor w/ 2 levels "F","M": 2 1 1 2 2
+
 - To extract portions of the data, use index operators ~$~ and ~[]~.
   #+name: subset
   #+begin_src R :exports both :session :results output
@@ -111,7 +126,7 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
     mydata[2,2]
 
     ## extract rows 2 to 5 in column 2
-    mydata[3:5,2]
+    mydata[2:4,2]
 
     ## extract age
     mydata$age
@@ -121,7 +136,18 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
 
     ## extract persons older than 40
     mydata$person[mydata$age >= 40]
+
+    ## extract age of persons older than 40
+    mydata$age[mydata$age >= 40]
   #+end_src
+
+  #+RESULTS: subset
+  : [1] 40
+  : [1] 40 17 14
+  : [1] 42 40 17 14  1
+  : [1] 40
+  : [1] "Peter" "Lois"
+  : [1] 42 40
 
 - In the last command, we extract from the column vector
   ~mydata$person~ only those values that are greater 40.
@@ -134,6 +160,9 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
     mydata$person[mydata$age >= 40 & mydata$sex == "M"]
   #+end_src
 
+  #+RESULTS: logical
+  : [1] "Peter"
+
 - To report size of data frames - number of records and variables,
   or rows and columns, use ~nrow~, ~ncol~ and ~dim~.
   #+name: size
@@ -144,6 +173,11 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
 
     dim(mydata)  # retrieve both number of rows and columns
   #+end_src
+
+  #+RESULTS: size
+  : [1] 5
+  : [1] 3
+  : [1] 5 3
 
 * TODO Practice: data frames
 
